# limnd2

./: .gitignore  .pypirc  CHANGELOG.toml  CLAUDE.md  LICENSE  METADATA_JSON_EXPORT.md  README.md  README_dev.md  maintainers.md  mkdocs.yml  pyproject.toml  requirements.txt  setup_project.bat
.github/workflows/: deploy_docs.yml  mypy_check.yml  publish_aws_pypi.yml  release_on_version_bump.yml
docs/: api.md  attributes.md  cli_convert_image.md  cli_convert_sequence.md  cli_frame_export.md  cli_index.md  cli_sequence_export.md  convert_image.md  convert_image_source.md  convert_sequence.md  experiment.md  experiment_factory.md  index.md  metadata.md  metadata_factory.md  nd2.md  nd2file.md  protocols.md
examples/: README.md  deepsim_reader_example.py  example_metadata_json_export.py  example_reader.py  example_writer.py  experiment_factory_example.py  metadata_factory_example.py
examples/convert_to_nd2_examples/: README.md  example_convert_simple.py  example_convert_tc.py  example_convert_tc2.py  example_convert_tz.py
examples/convert_to_nd2_examples/tiffs_t/: image_T1.tif  image_T2.tif  image_T3.tif  image_T4.tif  image_T5.tif  image_T6.tif  image_T7.tif  image_T8.tif  image_T9.tif
examples/convert_to_nd2_examples/tiffs_tc/: 2024_11_21_T01_DIA.tif  2024_11_21_T02_DAPI.tif  2024_11_21_T02_DIA.tif  2024_11_21_T03_DAPI - FITC - TRITC.tif  2024_11_21_T03_DIA.tif  2024_11_21_T05_DAPI - FITC - TRITC.tif  2024_11_21_T06_DIA.tif  2024_11_21_T07_DAPI.tif  2024_11_21_T08_DAPI - FITC - TRITC.tif  2024_11_21_T08_DIA.tif  2024_11_21_T09_DIA.tif  2024_11_21_T10_DIA.tif
examples/convert_to_nd2_examples/tiffs_tz/: exportz1t07.tif  exportz1t08.tif  exportz1t09.tif  exportz2t02.tif  exportz2t03.tif  exportz2t08.tif  exportz3t01.tif  exportz3t02.tif  exportz3t04.tif  exportz3t06.tif  exportz3t10.tif  exportz4t01.tif  exportz4t06.tif  exportz4t08.tif  exportz4t10.tif  exportz5t01.tif  exportz5t02.tif  exportz5t05.tif  exportz5t06.tif
examples/tiff_to_nd2/: example_convert_tc.py  example_convert_tc2.py  example_convert_tz.py  main.py
examples/tiff_to_nd2/tiffs/: exportz1t02.tif  exportz1t03.tif  exportz1t04.tif  exportz2t10.tif  exportz3t03.tif  exportz3t05.tif  exportz3t09.tif  exportz4t07.tif  exportz5t07.tif
examples/tiffs/: exportz1t06.tif  exportz2t01.tif  exportz2t04.tif  exportz2t07.tif  exportz3t07.tif  exportz3t08.tif  exportz5t04.tif
examples/tiffs_tc/: 2024_11_21_T01_DAPI - FITC - TRITC.tif  2024_11_21_T01_DAPI.tif  2024_11_21_T02_DAPI - FITC - TRITC.tif  2024_11_21_T03_DAPI.tif  2024_11_21_T04_DAPI - FITC - TRITC.tif  2024_11_21_T04_DAPI.tif  2024_11_21_T04_DIA.tif  2024_11_21_T05_DAPI.tif  2024_11_21_T05_DIA.tif  2024_11_21_T06_DAPI - FITC - TRITC.tif  2024_11_21_T06_DAPI.tif  2024_11_21_T07_DAPI - FITC - TRITC.tif  2024_11_21_T07_DIA.tif  2024_11_21_T08_DAPI.tif  2024_11_21_T09_DAPI - FITC - TRITC.tif  2024_11_21_T09_DAPI.tif  2024_11_21_T10_DAPI - FITC - TRITC.tif  2024_11_21_T10_DAPI.tif
examples/tiffs_tz/: exportz1t01.tif  exportz1t05.tif  exportz1t10.tif  exportz2t05.tif  exportz2t06.tif  exportz2t09.tif  exportz4t02.tif  exportz4t03.tif  exportz4t04.tif  exportz4t05.tif  exportz4t09.tif  exportz5t03.tif  exportz5t08.tif  exportz5t09.tif  exportz5t10.tif
limnd2/: __init__.py  __main__.py  attributes.py  base.py  binary.py  crawler.py  custom_data.py  customdata.py  experiment.py  experiment_factory.py  export.py  factory.py  file.py  image_info.py  index.py  lite_variant.py  litevariant.py  metadata.py  metadata_factory.py  nd2.py  nd2file.py  nd2file_types.py  protocols.py  results.py  textinfo.py  tiff_reader.py  treeview_helper.py  variant.py
limnd2/tools/: __init__.py  export.py  index.py
limnd2/tools/conversion/: LimConvertJsonOutput.py  LimConvertSequenceArgparser.py  LimConvertUtils.py  LimImageSource.py  LimImageSourceConvert.py  LimImageSourceJpeg.py  LimImageSourceMapping.py  LimImageSourcePng.py  LimImageSourceTiff.py  __init__.py  __main__.py  tiff_reader.py  tiff_to_ND2.py  tiff_to_NIS.py  tiff_to_NIS_argparser.py  tiff_to_NIS_json.py  tiff_to_NIS_utils.py
limnd2/util/: index.py  tiff_reader.py  tiff_to_NIS.py  tiff_to_NIS_argparser.py  tiff_to_NIS_json.py  tiff_to_NIS_nd2.py
src/limnd2/: __init__.py  attributes.py  base.py  binary.py  custom_data.py  experiment.py  experiment_factory.py  export.py  file.py  file_legacy.py  file_modern.py  image_info.py  lite_variant.py  metadata.py  metadata_factory.py  nd2.py  nd2file.py  nd2file_types.py  protocols.py  results.py  textinfo.py  variant.py  wellplate_factory.py
src/limnd2/nd2_compatability/: README.md  __init__.py  nd2file.py  nd2file_types.py
src/limnd2/tools/: __init__.py  export.py  index.py
tests/: .gitignore  README.md  conftest.py  run_tests.bat  test_compatability_nd2file.py  test_conversion.py  test_reader_base.py  test_reader_experiment.py  test_reader_export.py  test_reader_file.py  test_reader_image_info.py  test_reader_metadata.py  test_reader_nd2_files.py  test_reader_results.py  test_tools_export_cli.py  test_tools_index.py  test_writer.py
tests/static_type_check/: run_mypy_check.bat  run_pyright_check.bat
tests/test_suites/limnd2/: test_base_stores.py  test_compatability_nd2file.py  test_nd2_handler_extract_metadata.py  test_reader_base.py  test_reader_export.py  test_reader_file.py  (+5 more)
tests_compatability/: .gitignore  README.md  conftest.py  run_compatability_tests.bat  test_binary.py  test_codspeed.py  test_dask_dispatch.py  test_events.py  test_index.py  test_jobs.py  test_metadata.py  test_nd2file_compat_nd2_mirror.py  test_ome.py  test_ome_zarr.py  test_parse.py  test_reader.py  test_readme.py  test_rescue.py  test_rois.py  test_xml.py
tst/: conversion_test.py  conversion_test_single.py  convert_large_tiff.py  encoder_test.py  example.py  get_image_dims.py  legacy_test.py  main.py  metadata_test.py  print_wellplate_info.py  test_version1.py  tile_full_copy.py  tile_random_mix.py  tile_write_validation.py  tst1.py  tst2.py  tst3.py
util/: crawler.py  index.py  tiff_reader.py  tiff_to_NIS.py  tiff_to_NIS_argparser.py  tiff_to_NIS_json.py  tiff_to_NIS_nd2.py
(+36 files in other folders)
