[build-system]
requires = ["setuptools<69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "limnd2"
version = "0.3.0"
requires-python = ">=3.7"
authors = [
    {name = "Laboratory Imaging, s.r.o.", email = "techsupp@lim.cz"},
]

dependencies = [
    "h5py==3.12.1",
    "numpy",
    "ome_types",
    "pandas",
    "tifffile",
    "imagecodecs",
    "Pillow",
    'importlib-metadata; python_version<="3.12"',
]

[project.scripts]
limnd2-index = "limnd2.tools.index:main"
limnd2-convert-file-to-nd2 = "limnd2.tools:convert_file_to_nd2_cli"
limnd2-convert-sequence-to-nd2 = "limnd2.tools:convert_sequence_to_nd2_cli"
limnd2-get-image-dimensions = "limnd2.tools:get_file_dimensions_as_json"
limnd2-sequence-export = "limnd2.tools:sequence_export_cli"

[tool.setuptools]
packages = ["limnd2", "limnd2.tools", "limnd2.tools.conversion"]

[tool.mypy]
exclude = '^(build|dist|\.venv)/'
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = false
warn_unused_ignores = true
show_error_codes = true
strict = true
pretty = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=limnd2 --cov-report=term-missing"

[tool.coverage.run]
source = ["limnd2"]
branch = true

[tool.coverage.paths]
source = ["limnd2"]

[tool.coverage.report]
show_missing = true