[build-system]
requires = ["setuptools<=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "limnd2"
license = "LICENSE"
version = "0.3.0"
requires-python = ">=3.9"
authors = [
    {name = "Laboratory Imaging, s.r.o.", email = "techsupp@lim.cz"},
]

dependencies = [
    "numpy",
    "ome_types",
    "tifffile",
    "imagecodecs",
    "Pillow",
]

[project.optional-dependencies]
results = [
    "h5py==3.12.1",
    "pandas",
]
dev = [
    "build",
    "coverage",
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "mypy",
    "pyright",
    "pytest",
    "pytest-cov",
    "pytest-html",
    "setuptools<=69",
    "twine",
    "uv",
    "wheel",

    "limnd2[results]",
]

[project.scripts]
limnd2-index = "limnd2.tools.index:main"
limnd2-convert-file-to-nd2 = "limnd2.tools:convert_file_to_nd2_cli"
limnd2-convert-sequence-to-nd2 = "limnd2.tools:convert_sequence_to_nd2_cli"
limnd2-get-image-dimensions = "limnd2.tools:get_file_dimensions_as_json"
limnd2-sequence-export = "limnd2.tools:sequence_export_cli"
limnd2-frame-export = "limnd2.tools:frame_export_cli"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["limnd2", "limnd2.*"]

[tool.mypy]
exclude = '^(build|dist|\\.venv)(/|\\\\)'
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = false
warn_unused_ignores = true
show_error_codes = true
strict = true
pretty = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=limnd2 --cov-report=term-missing"
markers = [
    "slow: tests that take too long and should only be run locally (not on CI)",
]

[tool.coverage.run]
source = ["src/limnd2"]
branch = true

[tool.coverage.paths]
source = [
  "src/limnd2",
  "*/site-packages/limnd2",
  "*/Lib/site-packages/limnd2"
]

[tool.coverage.report]
show_missing = true


[tool.pyright]
include = ["src"]
exclude = []
defineConstant = { DEBUG = true }

reportMissingImports = "error"
reportMissingTypeStubs = false

pythonVersion = "3.12"
pythonPlatform = "Windows"

executionEnvironments = [
  { root = "src/limnd2", pythonVersion = "3.12", pythonPlatform = "Windows" }
]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "local"
url = "http://gaexec:9500/simple"
publish-url = "http://gaexec:9500"
explicit = true